[package]
name = "potnet"
version = "0.4.2"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

[dependencies]
structopt = {version = "0.3", default-features = false }
walkdir = "2"
log = "0.4.0"
failure = "0.1"
ipnet = "2"
itertools = "0.8"

[dependencies.structopt-flags]
version = "^0.3.4"
features = ["simplelog"]
[profile.release]
lto = true

[[bin]]
name = "potcpu"
path = "src/bin/potcpu.rs"
