[package]
name = "potnet"
version = "0.4.4"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"
categories = ["command-line-interface"]
keywords = ["FreeBSD"]
repository = "https://github.com/pizzamig/potnet"
description = "Command line utilities needed by the pot framework"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
structopt = {version = "0.3", default-features = false }
walkdir = "2"
log = "0.4"
ipnet = "2"
itertools = "0.10"
thiserror = "1"
anyhow = "1"

[dependencies.structopt-flags]
version = "^0.3"
features = ["simplelog"]

[dependencies.pot]
version = "=0.5.0"
path = "pot"

[profile.release]
lto = true

[[bin]]
name = "potcpu"
path = "src/bin/potcpu.rs"
